Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       </header>
       <section>
         <h1>
-<a id="simple-form-submission-in-reactjs-nodejs-and-mongo-db-with-docker" class="anchor" href="#simple-form-submission-in-reactjs-nodejs-and-mongo-db-with-docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Simple form submission in ReactJS, NodeJS and Mongo DB with Docker</h1>
+<a id="simple-form-submission-in-reactjs" class="anchor" href="#simple-form-submission-in-reactjs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Simple form submission in ReactJS,</h1>
+<h3>
+<a id="nodejs-and-mongo-db-with-docker" class="anchor" href="#nodejs-and-mongo-db-with-docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NodeJS and Mongo DB with Docker</h3>
 <p>2 Tabs Single page application</p>
 <p>Page one</p>
 <ul>
@@ -71,7 +73,9 @@ The questions can be anything you wish to ask.</li>
 <li>allow you to use React Dev Server</li>
 <li>allow you to use Nodemon for nodejs dev</li>
 </ul>
-<p>### alternatively, <code>without Docker</code>, you can start the projects within their directory with common node / yarn
+<h3>
+<a id="alternatively-without-docker" class="anchor" href="#alternatively-without-docker" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>alternatively, without Docker,</h3>
+<p>you can start the projects within their directory with common node / yarn
 [REQUIRES mongo DB default installation and root password as shown below]</p>
 <pre><code>MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=m0ng0passw
